feat(分享功能): 添加微信分享功能及分享模态框样式
实现微信分享功能，包括二维码生成和分享选项切换
添加分享模态框的HTML结构和CSS样式
修复部分祝福语文案中的错别字和表达问题

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
                 <div class="result-content" id="result-content"></div>
                 <div class="result-actions">
                     <button id="copy-btn" class="btn"><i class="fas fa-copy"></i> 复制</button>
+                    <button id="share-btn" class="btn"><i class="fas fa-share-alt"></i> 分享</button>
                     <button id="regenerate-btn" class="btn"><i class="fas fa-redo"></i> 重新生成</button>
                 </div>
             </div>
@@ -186,7 +187,7 @@
                 background: 'https://picsum.photos/id/1055/1920/1080' // 新年烟花背景
             },
             '教师节': {
-                description: '教师节，旨在肯定教师为教育事业所做的贡献。在中国近现代史上，多次以不同的日期作为过教师节。直至1985年，第六届全国人大常委会第九次会议通过了国务院关于建立教师节的议案，才真正确定了1985年9月10日为中国第一个教师节。',
+                description: '教师节，旨在肯定教师为教育事业所做的贡献。在中国近现代史上，多次以不同的日期作为过教师节。直至1985年，第六届全国人大九次会议通过了国务院关于建立教师节的议案，才真正确定了1985年9月10日为中国第一个教师节。',
                 tag: '感恩师恩',
                 keywords: ['教师', '教育', '感谢', '知识', '黑板', '粉笔'],
                 background: 'https://picsum.photos/id/1060/1920/1080' // 教室黑板背景
@@ -457,11 +458,11 @@
                         },
                         深情: {
                             父母: `亲爱的爸爸妈妈，${festival}到了。感谢你们的养育之恩，你们的爱是我一生的财富。愿你们健康长寿，幸福安康！`,
-                            子女: `我的宝贝，${festival}快乐！看着你一天天长大，是我最大的幸福。愿你永远保持一颗善良的心，勇敢面对未来的挑战！`,
+                            子女: `我的宝贝，${festival}快乐！看着你一天天长大，是我最大的幸福。愿永远保持一颗善良的心，勇敢面对未来的挑战！`,
                             配偶: `亲爱的，${festival}快乐！谢谢你陪我走过的每一个日日夜夜，你的爱让我的生命变得完整。愿我们永远相爱，直到永远！`,
-                            朋友: `朋友，${festival}快乐！虽然我们不能经常见面，但你永远是我心中最重要的人。愿我们的友谊长存，无论何时何地，都能彼此牵挂！`,
+                            朋友: `朋友，${festival}快乐！虽然我们不能经常见面，但你永远是我心中最重要的朋友。愿我们的友谊长存，无论何时何地，都能彼此牵挂！`,
                             老师: `敬爱的老师，${festival}快乐！您的教诲如明灯照亮我前行的道路，您的关爱如春风温暖我的心灵。感谢您的辛勤付出，祝您永远健康快乐！`,
-                            同事: `各位同事，${festival}快乐！感谢你们在工作中的支持和帮助，让我在这个团队中感受到了温暖和力量。愿我们在新的一年里继续携手共进，创造更加美好的未来！`,
+                            同事: `各位同事，${festival}快乐！感谢你们在工作中的支持和帮助，让我在这个团队中感受到温暖和力量。愿我们在新的一年里继续携手共进，创造更加美好的未来！`,
                             领导: `尊敬的领导，${festival}快乐！感谢您的信任和指导，让我在工作中不断成长和进步。您的榜样力量激励着我不断努力，我会以更加饱满的热情投入到工作中，不辜负您的期望！`,
                             客户: `尊敬的客户，${festival}快乐！感谢您对我们的信任和支持，您的满意是我们最大的追求。我们将继续秉承“客户至上”的服务理念，为您提供更加优质的产品和服务！`,
                             长辈: `亲爱的${relationship}，${festival}快乐！您的关爱和教诲如同一座灯塔，照亮我前行的道路。感谢您为我们所做的一切，祝您身体健康，幸福长寿！`,
@@ -476,7 +477,7 @@
                             同事: `各位同事，${festival}快乐！我们正处在一个充满机遇和挑战的时代，只有不断学习和进步，才能跟上时代的步伐。愿我们在新的一年里携手共进，共同成长，创造更加辉煌的业绩！`,
                             领导: `尊敬的领导，${festival}快乐！感谢您的信任和支持，让我有机会在工作中锻炼和成长。在您的带领下，我们团队充满了活力和创造力。愿您在新的一年里身体健康，工作顺利，带领我们创造更加美好的未来！`,
                             客户: `尊敬的客户，${festival}快乐！感谢您对我们的信任和支持，您的需求是我们不断创新和进步的动力。在新的一年里，我们将继续努力，为您提供更加优质的产品和服务，与您携手共创美好未来！`,
-                            长辈: `亲爱的${relationship}，${festival}快乐！您的一生经历了许多风雨，您的坚韧和智慧是我们最宝贵的财富。愿您在新的一年里身体健康，心情愉快，继续为我们讲述那些充满智慧的故事！`,
+                            长辈: `亲爱的${relationship}，${festival}快乐！您的一生经历了许多风雨，您的坚韧和智慧是我们最珍贵的财富。愿您在新的一年里身体健康，心情愉快，继续为我们讲述那些充满智慧的故事！`,
                             晚辈: `亲爱的${relationship}，${festival}快乐！年轻是最大的资本，也是最大的责任。愿你在美好的青春时光里，努力学习，积极进取，为实现自己的人生价值而努力奋斗！`
                         }
                     },
@@ -487,10 +488,10 @@
                             配偶: `亲爱的，${festival}快乐！转眼间，我们已经一起走过了许多个日日夜夜。在这些日子里，我们有欢笑，有泪水，有成功，也有挫折。但无论遇到什么困难，我们都始终相互扶持，相互鼓励。感谢你一直以来的陪伴和支持，你是我生命中最重要的人。愿我们在新的一年里继续相爱，共同创造更加美好的未来。`,
                             朋友: `亲爱的朋友，${festival}到了，我想对你说一声谢谢！谢谢你在我困难的时候伸出援手，谢谢你在我迷茫的时候给我指引，谢谢你在我开心的时候与我分享快乐。虽然我们不能经常见面，但你永远是我心中最重要的朋友。愿你在新的一年里事业顺利，家庭幸福，身体健康，万事如意！`,
                             老师: `敬爱的老师，${festival}快乐！您是我人生道路上的引路人，是您教会了我知识，教会了我做人的道理。您的教诲如明灯照亮我前行的道路，您的关爱如春风温暖我的心灵。感谢您的辛勤付出，您的学生将永远铭记您的恩情。愿您在新的一年里身体健康，工作顺利，桃李满天下！`,
-                            同事: `各位同事，${festival}快乐！过去的一年，我们一起努力，一起奋斗，共同完成了许多任务。在这个过程中，我们相互支持，相互帮助，建立了深厚的友谊。感谢你们在工作中的配合和支持，让我们的团队更加团结，更加有战斗力。愿我们在新的一年里继续携手共进，共创佳绩！`,
+                            同事: `各位同事，${festival}快乐！过去的一年，我们一起努力，一起奋斗，共同完成了许多任务。在这个过程中，我们相互支持，相互帮助，建立了深深的友谊。感谢你们在工作中的配合和支持，让我们的团队更加团结，更加有战斗力。愿我们在新的一年里继续携手共进，共创佳绩！`,
                             领导: `尊敬的领导，${festival}快乐！感谢您在过去一年里对我的关心和指导，让我在工作中不断成长和进步。您的领导能力和人格魅力让我敬佩不已，您是我学习的榜样。在新的一年里，我将继续努力工作，不辜负您的期望，为公司的发展贡献自己的力量。祝您身体健康，工作顺利，家庭幸福！`,
                             客户: `尊敬的客户，${festival}快乐！感谢您长期以来对我们公司的信任和支持，您的满意是我们最大的追求。在过去的一年里，我们不断努力，不断创新，为您提供了更好的产品和服务。在新的一年里，我们将继续秉承“客户至上”的服务理念，不断提升服务质量，为您提供更加优质的产品和服务。祝您身体健康，事业顺利，家庭幸福！`,
-                            长辈: `亲爱的${relationship}，${festival}快乐！时光飞逝，转眼间又到了${festival}。每当这个时候，我都会想起您对我的关爱和教导。您的一生经历了许多风雨，您的坚韧和智慧是我们最宝贵的财富。在新的一年里，愿您身体健康，心情愉快，生活充满阳光。我们会常来看望您，陪伴您度过更多美好的时光。`,
+                            长辈: `亲爱的${relationship}，${festival}快乐！时光飞逝，转眼间又到了${festival}。每当这个时候，我都会想起您对我的关爱和教导。您的一生经历了许多风雨，您的坚韧和智慧是我们最珍贵的财富。在新的一年里，愿您身体健康，心情愉快，生活充满阳光。我们会常来看望您，陪伴您度过更多美好的时光。`,
                             晚辈: `亲爱的${relationship}，${festival}快乐！看着你一天天长大，变得越来越懂事，我感到无比欣慰。你是我们家族的希望，是未来的栋梁之材。在新的一年里，希望你能够努力学习，积极向上，培养良好的品德和习惯。记住，无论遇到什么困难，都要勇敢面对，永不放弃。相信自己，你一定能够实现自己的梦想！`
                         },
                         // 其他语气和长度的模板类似，这里省略...
@@ -523,5 +524,24 @@
             }
         });
     </script>
+
+    <!-- 分享模态框 -->
+    <div id="share-modal" class="modal">
+        <div class="modal-content fade-in">
+            <span class="close">&times;</span>
+            <h2>分享祝福语</h2>
+            <div class="share-options">
+                <button class="share-btn weixin" id="weixin-share"><i class="fab fa-weixin"></i> 微信</button>
+                <button class="share-btn weibo" id="weibo-share"><i class="fab fa-weibo"></i> 微博</button>
+                <button class="share-btn qq" id="qq-share"><i class="fab fa-qq"></i> QQ</button>
+                <button class="share-btn link" id="link-share"><i class="fas fa-link"></i> 复制链接</button>
+            </div>
+            <div id="wechat-qrcode" class="wechat-qrcode" style="display: none;">
+                <p>请使用微信扫描二维码分享</p>
+                <div id="qrcode-container"></div>
+            </div>
+            <div id="share-toast" class="toast">分享链接已复制到剪贴板</div>
+        </div>
+    </div>
 </body>
 </html>
