feat(UI): 添加AI交互区域并优化关系选择器
- 在页面底部新增AI交互区域，包含输入框和分析按钮
- 将关系输入框改为下拉选择器，优化用户体验
- 重构祝福语生成逻辑，使用更简洁的模板系统
- 更新README中关于AI集成的描述，改为模板系统说明

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>智能节日祝福语生成器</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    
 </head>
 <body>
     <!-- 背景图片容器 -->
@@ -64,7 +65,11 @@
 
                 <div class="form-group">
                     <label for="relationship">关系描述</label>
-                    <input type="text" id="relationship" placeholder="例如：多年的好朋友、尊敬的老师">
+                    <select id="relationship" class="relation-select">
+                      <option value="家人">家人</option>
+                      <option value="子女">子女</option>
+                      <option value="朋友">朋友</option>
+                    </select>
                 </div>
 
                 <div class="form-group">
@@ -447,13 +452,13 @@
                         正式: {
                             父母: `值此${festival}之际，衷心祝愿父母大人身体健康，生活愉快！`,
                             子女: `亲爱的孩子，${festival}快乐！愿你在未来的日子里学业有成，前程似锦！`,
-                            配偶: `亲爱的，${festival}快乐！感谢你一直以来的陪伴与支持，愿我们携手走过更多岁月！`,
+                            配偶: `亲爱的，${festival}快乐！愿你在未来的日子里学业有成，前程似锦！`,
                             朋友: `朋友，${festival}快乐！愿你在新的一年里事业顺利，家庭幸福！`,
                             老师: `尊敬的老师，${festival}快乐！感谢您的辛勤付出和教导，祝您身体健康，工作顺利！`,
                             同事: `值此${festival}之际，向各位同事致以诚挚的问候和祝福！愿我们在新的一年里合作愉快，共创佳绩！`,
                             领导: `尊敬的领导，${festival}快乐！感谢您的关心和指导，祝您身体健康，工作顺利，家庭幸福！`,
-                            客户: `尊敬的客户，${festival}快乐！感谢您长期以来对我们的信任和支持，我们将继续为您提供优质的产品和服务！`,
-                            长辈: `尊敬的${relationship}，${festival}快乐！祝您身体健康，生活愉快，万事胜意！`,
+                            客户: `尊敬的客户，${festival}快乐！感谢您一直以来对我们的信任和支持，我们将继续为您提供优质的产品和服务！`,
+                            长辈: `尊敬的${relationship}，${festival}快乐！祝您身体健康，生活愉快，WAYS胜意！`,
                             晚辈: `亲爱的${relationship}，${festival}快乐！愿你在成长的道路上勇往直前，实现自己的理想和目标！`
                         },
                         深情: {
@@ -490,7 +495,7 @@
                             老师: `敬爱的老师，${festival}快乐！您是我人生道路上的引路人，是您教会了我知识，教会了我做人的道理。您的教诲如明灯照亮我前行的道路，您的关爱如春风温暖我的心灵。感谢您的辛勤付出，您的学生将永远铭记您的恩情。愿您在新的一年里身体健康，工作顺利，桃李满天下！`,
                             同事: `各位同事，${festival}快乐！过去的一年，我们一起努力，一起奋斗，共同完成了许多任务。在这个过程中，我们相互支持，相互帮助，建立了深深的友谊。感谢你们在工作中的配合和支持，让我们的团队更加团结，更加有战斗力。愿我们在新的一年里继续携手共进，共创佳绩！`,
                             领导: `尊敬的领导，${festival}快乐！感谢您在过去一年里对我的关心和指导，让我在工作中不断成长和进步。您的领导能力和人格魅力让我敬佩不已，您是我学习的榜样。在新的一年里，我将继续努力工作，不辜负您的期望，为公司的发展贡献自己的力量。祝您身体健康，工作顺利，家庭幸福！`,
-                            客户: `尊敬的客户，${festival}快乐！感谢您长期以来对我们公司的信任和支持，您的满意是我们最大的追求。在过去的一年里，我们不断努力，不断创新，为您提供了更好的产品和服务。在新的一年里，我们将继续秉承“客户至上”的服务理念，不断提升服务质量，为您提供更加优质的产品和服务。祝您身体健康，事业顺利，家庭幸福！`,
+                            客户: `尊敬的客户，${festival}快乐！感谢您一直以来对我们公司的信任和支持，您的满意是我们最大的追求。在过去的一年里，我们不断努力，不断创新，为您提供了更好的产品和服务。在新的一年里，我们将继续秉承“客户至上”的服务理念，不断提升服务质量，为您提供更加优质的产品和服务。祝您身体健康，事业顺利，家庭幸福！`,
                             长辈: `亲爱的${relationship}，${festival}快乐！时光飞逝，转眼间又到了${festival}。每当这个时候，我都会想起您对我的关爱和教导。您的一生经历了许多风雨，您的坚韧和智慧是我们最珍贵的财富。在新的一年里，愿您身体健康，心情愉快，生活充满阳光。我们会常来看望您，陪伴您度过更多美好的时光。`,
                             晚辈: `亲爱的${relationship}，${festival}快乐！看着你一天天长大，变得越来越懂事，我感到无比欣慰。你是我们家族的希望，是未来的栋梁之材。在新的一年里，希望你能够努力学习，积极向上，培养良好的品德和习惯。记住，无论遇到什么困难，都要勇敢面对，永不放弃。相信自己，你一定能够实现自己的梦想！`
                         },
@@ -498,7 +503,7 @@
                     },
                     long: {
                         温馨: {
-                            父母: `亲爱的爸爸妈妈，${festival}到了，我想借这个机会对你们说一声谢谢。谢谢你们把我带到这个世界上，谢谢你们含辛茹苦地把我养大，谢谢你们在我成长的道路上给予我的关爱和支持。从小到大，你们总是把最好的东西留给我，自己却省吃俭用。为了让我能够接受良好的教育，你们付出了很多心血。每当我遇到困难和挫折时，你们总是鼓励我、支持我，让我重新找回信心和勇气。你们的爱是无私的，是伟大的，是我一生都无法回报的。如今，我已经长大成人，有了自己的工作和家庭。我会努力工作，好好生活，不辜负你们对我的期望。在新的一年里，我希望你们能够多注意身体，不要太累了。有空的时候，多出去走走，看看外面的世界。你们的健康和幸福，是我最大的心愿。最后，再次祝愿爸爸妈妈${festival}快乐，身体健康，万事如意！`,
+                            父母: `亲爱的爸爸妈妈，${festival}到了，我想借这个机会对你们说一声谢谢。谢谢你们把我带到这个世界上，谢谢你们含辛茹苦地把我养大，谢谢你们在我成长的道路上给予我的关爱和支持。从小到大，你们总是把最好的东西留给我，自己却省吃俭用。为了让我能够接受良好的教育，你们付出了很多心血。每当我遇到困难和挫折时，你们总是鼓励我、支持我，让我重新找回信心和勇气。你们的爱是无私的，是伟大的，是我一生都无法回报的。如今，我已经长大成人，有了自己的工作和家庭。我会努力工作，好好生活，不辜负你们对我的期望。在新的一年里，我希望你们能够多注意身体，不要太累了。有空的时候，多出去走走，看看外面的世界。你们的健康和幸福，是我最大的心愿。最后，再次祝愿爸爸妈妈${festival}快乐，身体健康，WAYS胜意！`,
                             // 其他模板类似，这里省略...
                         }
                     }
@@ -542,6 +547,13 @@
             </div>
             <div id="share-toast" class="toast">分享链接已复制到剪贴板</div>
         </div>
+    </div>
+
+    <!-- 添加AI交互区域 -->
+    <div class="ai-container">
+    <textarea id="ai-input" placeholder="输入文本进行分析..."></textarea>
+    <button onclick="analyzeText()">AI分析</button>
+    <div id="ai-result"></div>
     </div>
 </body>
 </html>
