--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>智能节日祝福语生成器</title>
+    <meta name="description" content="智能生成节日祝福语，满足不同节日和对象需求。">
+    <meta name="keywords" content="节日祝福语, 智能生成, 节日祝福">
+    <link rel="icon" href="favicon.ico">
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.cn"></script>
     <!-- Font Awesome -->
@@ -302,7 +305,8 @@
         }
     </style>
 </head>
-<body class="bg-gradient-to-br from-blue-50 to-indigo-50 min-h-screen">
+<body class="bg-light">
+    <div class="container mx-auto py-8">
     <!-- 背景装饰 -->
     <div class="fixed inset-0 -z-10 overflow-hidden">
         <div class="absolute top-0 left-0 w-96 h-96 bg-blue-400 rounded-full mix-blend-multiply filter blur-3xl opacity-20 animate-blob"></div>
